--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                           <hr>
                           <p>
                             Pracowałem nad stworzeniem strony internetowej (strony kontaktowej) dla studia makijażu. Podczas projektowania współpracowałem z klientką nad stworzeniem interfejsu 
-                            odpowiadającego jej oczekiwaniom. Finalny wygląd można sprawdzić pod podanym <a href="#">adresem</a>
+                            odpowiadającego jej oczekiwaniom. Finalny wygląd można sprawdzić pod podanym <a href="https://kacperk72.github.io/weronikakepa_makeup/">adresem</a>
                           </p>
                       </div>
                   </div>
